--- a/pages/brandthree/brandthree.wxml
+++ b/pages/brandthree/brandthree.wxml
@@ -5,7 +5,7 @@
         style="height:100%;">
         <swiper-item>
           <image mode="widthFix"
-            src="https://img13.360buyimg.com/ddimg/jfs/t1/139839/8/8562/636554/5f609f5bE413cdd1f/6a660694aa6a17fc.jpg"
+            src="https://img12.360buyimg.com/ddimg/jfs/t1/112098/27/18029/504468/5f60a01bE064e34a6/cad9729ef9feba66.jpg"
             class="slide-image" />
         </swiper-item>
 
@@ -27,7 +27,7 @@
   <view class="tag_maxdiv">
     <view class="video_div">
       <video style="width: 100%;height: 100%;" id="myVideo"
-        src="https://fnck-20200914-1303154931.cos.ap-guangzhou.myqcloud.com/%E8%A7%86%E9%A2%91/%E9%BC%8E%E6%98%932.mp4?q-sign-algorithm=sha1&q-ak=AKIDHL7fPrFwXrtdX9SYLq75j5BxTeFbR3KK&q-sign-time=1600068141;1915428141&q-key-time=1600068141;1915428141&q-header-list=&q-url-param-list=&q-signature=16cac82227dd306c7ea96f8e4e2f6da9a0afcc6d"
+        src="https://fnck-20200914-1303154931.cos.ap-guangzhou.myqcloud.com/%E8%A7%86%E9%A2%91/%E9%BC%8E%E6%98%93%E6%97%A0%E6%B0%B4%E5%8D%B0%E6%88%90%E7%89%872.mp4?q-sign-algorithm=sha1&q-ak=AKIDHL7fPrFwXrtdX9SYLq75j5BxTeFbR3KK&q-sign-time=1600168013;1915528013&q-key-time=1600168013;1915528013&q-header-list=&q-url-param-list=&q-signature=de84e119e9243c079de10a467d0c5bcd869c39f5"
         binderror="videoErrorCallback" enable-danmu show-center-play-btn='{{false}}' show-play-btn="{{true}}" controls
         picture-in-picture-mode="{{['push', 'pop']}}" bindenterpictureinpicture='bindVideoEnterPictureInPicture'
         bindleavepictureinpicture='bindVideoLeavePictureInPicture'></video>
@@ -40,31 +40,25 @@
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <!-- <view class="header" style="height:800rpx;"></view> -->
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img11.360buyimg.com/ddimg/jfs/t1/121029/18/12977/340204/5f609d00E2d358b5d/260a5ea713a7cd23.jpg">
+        src="https://img13.360buyimg.com/ddimg/jfs/t1/121505/32/12797/459378/5f609e81Ec210302e/66b5afb0081b2e3f.jpg">
       </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img13.360buyimg.com/ddimg/jfs/t1/117521/33/17875/656666/5f609d4aEe31be455/7116cbb008d2c785.jpg">
+        src="https://img10.360buyimg.com/ddimg/jfs/t1/143957/1/8663/416081/5f60a067Efb689910/58905aac97eba28a.jpg">
       </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img12.360buyimg.com/ddimg/jfs/t1/135584/40/9940/363350/5f609d6fE59839242/b0d1137b8d445b0d.jpg">
+        src="https://img13.360buyimg.com/ddimg/jfs/t1/119972/29/12805/502723/5f60a079E3a4bce91/bf1d2e3f349fdec4.jpg">
       </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img12.360buyimg.com/ddimg/jfs/t1/130196/6/10067/229981/5f609da0Ec45ac29e/3b5154132948f35e.jpg">
-      </image>
-  </view>
-
-  <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
-    <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img10.360buyimg.com/ddimg/jfs/t1/114365/23/18132/967765/5f609db4E0913635b/76e8f3b575ef2848.jpg">
+        src="https://img12.360buyimg.com/ddimg/jfs/t1/113785/9/17891/2408530/5f60a09cE7333ba80/5b86ad7b92c9c644.jpg">
       </image>
   </view>
 
