--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,47 +4,48 @@
       <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}"
         style="height:100%;">
         <swiper-item>
-          <image src="https://img13.360buyimg.com/ddimg/jfs/t1/119114/40/17804/407339/5f5f19f1E2da3e696/e12097db558a3e27.jpg" class="slide-image" />
+          <image mode="widthFix"
+            src="https://img10.360buyimg.com/ddimg/jfs/t1/124856/8/12620/935208/5f6097f6Efbe75dc7/68a28f980178cf14.jpg"
+            class="slide-image" />
         </swiper-item>
 
         <swiper-item>
-          <image src="https://i.loli.net/2020/09/03/mhV1AULGwpRZd7F.jpg" class="slide-image" />
+          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6ExmR.md.jpg" class="slide-image" />
         </swiper-item>
 
         <swiper-item>
-          <image src="https://i.loli.net/2020/09/03/g9o5NACQyPfFbKi.jpg" class="slide-image" />
+          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6VdhT.jpg" class="slide-image" />
         </swiper-item>
+
+        <swiper-item>
+          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6V09U.md.jpg" class="slide-image" />
+        </swiper-item>
+
+
       </swiper>
     </view>
   </view>
 
   <view class="tag_maxdiv">
-    <view class="img_div" bindtap="understand">
-      <image style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://i.loli.net/2020/09/08/mUq154fnjFltIyY.jpg"></image>
+    <view class="img_div">
+      <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
+        src="https://img11.360buyimg.com/ddimg/jfs/t1/142300/23/8454/182775/5f609830E994c9258/13552279327307ba.jpg">
+      </image>
     </view>
   </view>
 
   <view class="tag_maxdiv">
     <view class="video_div">
-    <video
-      style="width: 100%;height: 100%;" 
-      id="myVideo" 
-      src="https://fnck-20200914-1303154931.cos.ap-guangzhou.myqcloud.com/%E8%A7%86%E9%A2%91/%E9%BC%8E%E6%98%93.mp4?q-sign-algorithm=sha1&q-ak=AKIDHL7fPrFwXrtdX9SYLq75j5BxTeFbR3KK&q-sign-time=1600052178;1915412178&q-key-time=1600052178;1915412178&q-header-list=&q-url-param-list=&q-signature=837aeca2ec6f46ee2fcea19d0ee8bf5f07485faf" 
-      binderror="videoErrorCallback" 
-      enable-danmu 
-      show-center-play-btn='{{false}}' 
-      show-play-btn="{{true}}" 
-      controls
-      picture-in-picture-mode="{{['push', 'pop']}}"
-      bindenterpictureinpicture='bindVideoEnterPictureInPicture'
-      bindleavepictureinpicture='bindVideoLeavePictureInPicture'
-    ></video>
+      <video style="width: 100%;height: 100%;" id="myVideo"
+        src="https://fnck-20200914-1303154931.cos.ap-guangzhou.myqcloud.com/%E8%A7%86%E9%A2%91/%E9%BC%8E%E6%98%93.mp4?q-sign-algorithm=sha1&q-ak=AKIDHL7fPrFwXrtdX9SYLq75j5BxTeFbR3KK&q-sign-time=1600052178;1915412178&q-key-time=1600052178;1915412178&q-header-list=&q-url-param-list=&q-signature=837aeca2ec6f46ee2fcea19d0ee8bf5f07485faf"
+        binderror="videoErrorCallback" enable-danmu show-center-play-btn='{{false}}' show-play-btn="{{true}}" controls
+        picture-in-picture-mode="{{['push', 'pop']}}" bindenterpictureinpicture='bindVideoEnterPictureInPicture'
+        bindleavepictureinpicture='bindVideoLeavePictureInPicture'></video>
+
+    </view>
 
   </view>
 
-  </view>
-  
 
 
 
@@ -91,22 +92,25 @@
 
   <view class="tag_maxdiv">
     <view class="img_div" bindtap="brandone">
-      <image style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://i.loli.net/2020/09/08/mUq154fnjFltIyY.jpg"></image>
+      <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
+        src="https://img12.360buyimg.com/ddimg/jfs/t1/147855/20/8397/222352/5f6098afE744576c0/f33a2ffe2a346296.jpg">
+      </image>
     </view>
   </view>
 
   <view class="tag_maxdiv">
-    <view class="img_div" bindtap="brandone">
-      <image style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://i.loli.net/2020/09/08/mUq154fnjFltIyY.jpg"></image>
+    <view class="img_div" bindtap="brandtwo">
+      <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
+        src="https://img11.360buyimg.com/ddimg/jfs/t1/129395/9/12659/209058/5f6098f7E06c0d4a0/e26b1af96c6c1021.jpg">
+      </image>
     </view>
   </view>
 
   <view class="tag_maxdiv">
-    <view class="img_div" bindtap="brandone">
-      <image style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://i.loli.net/2020/09/08/mUq154fnjFltIyY.jpg"></image>
+    <view mode="widthFix" class="img_div" bindtap="brandthree">
+      <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
+        src="https://img13.360buyimg.com/ddimg/jfs/t1/149092/31/8423/238904/5f609907E15caf54e/14849a58988bac50.jpg">
+      </image>
     </view>
   </view>
 
@@ -127,7 +131,10 @@
     <view class="layout">
       <view class="layout_maxdiv" style="margin-top: 0;" bindtap="wenzhangdjone">
         <view class="layout_imgdiv">
-          <view class="layout_wz">文章</view>
+          <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
+        src="https://img14.360buyimg.com/ddimg/jfs/t1/134113/10/9950/101232/5f609a16Eaa25f1e6/aa22982c9ba93cdd.png">
+      </image>
+          <!-- <view class="layout_wz">文章</view> -->
         </view>
         <view class="layout_zhongdiv">
           <view class="layout_title">破除行业寒冰，引领创富之路丨鼎易乐平战役拉开江西首战</view>
@@ -138,7 +145,11 @@
 
       <view class="layout_maxdiv" bindtap="wenzhangdjtwo">
         <view class="layout_imgdiv">
-          <view class="layout_wz">文章</view>
+          <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
+        src="https://img10.360buyimg.com/ddimg/jfs/t1/147949/18/8430/89297/5f609b0bEda322c46/4d8ff55a3b485dec.png">
+      </image>
+          
+          <!-- <view class="layout_wz">文章</view> -->
         </view>
         <view class="layout_zhongdiv">
           <view class="layout_title">致敬新时代，探索LED灯照明新未来</view>
@@ -165,7 +176,7 @@
       <view class="content">
         <view class="yxzc_content1">营销支持：</view>
         <view class="yxzc_content2">蜂鸟国际</view>
-        <view class="yxzc_content2" style="margin-left:10rpx;">Copyright © 2013-2020 致设计</view>
+        <!-- <view class="yxzc_content2" style="margin-left:10rpx;">Copyright © 2013-2020 致设计</view> -->
         <view class="yxzc_content3" bindtap="fnckdj">了解更多>></view>
       </view>
 
