--- a/pages/wenzhangxiangxingone/wenzhangxiangxingone.wxml
+++ b/pages/wenzhangxiangxingone/wenzhangxiangxingone.wxml
@@ -138,13 +138,16 @@
 
     <view class="red_div"></view>
 
-    <view class="yxzc_div">
-      <view class="content">
+    <view class="yxzc_div" bindtap="fnckdj">
+      <!-- <view class="content">
         <view class="yxzc_content1">营销支持：</view>
         <view class="yxzc_content2">蜂鸟国际</view>
 
-        <view class="yxzc_content3" bindtap="fnckdj">了解更多>></view>
-      </view>
+        <view class="yxzc_content3" >了解更多>></view>
+      </view> -->
+      <image mode="widthFix" style="width: 100%;height: 100%;"
+        src="https://img10.360buyimg.com/ddimg/jfs/t1/148553/21/8494/428803/5f617271E030422e2/5af8874323abe93b.jpg">
+      </image>
 
     </view>
   </view>
