--- a/pages/wenzhangxiangxingone/wenzhangxiangxingone.wxml
+++ b/pages/wenzhangxiangxingone/wenzhangxiangxingone.wxml
@@ -145,7 +145,7 @@
 
         <view class="yxzc_content3" >了解更多>></view>
       </view> -->
-      <image mode="widthFix" style="width: 100%;height: 100%;"
+      <image  style="width: 100%;height: 100%;"
         src="https://img10.360buyimg.com/ddimg/jfs/t1/148553/21/8494/428803/5f617271E030422e2/5af8874323abe93b.jpg">
       </image>
 
