--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -132,8 +132,8 @@
       <view class="layout_maxdiv" style="margin-top: 0;" bindtap="wenzhangdjone">
         <view class="layout_imgdiv">
           <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img14.360buyimg.com/ddimg/jfs/t1/134113/10/9950/101232/5f609a16Eaa25f1e6/aa22982c9ba93cdd.png">
-      </image>
+            src="https://img14.360buyimg.com/ddimg/jfs/t1/134113/10/9950/101232/5f609a16Eaa25f1e6/aa22982c9ba93cdd.png">
+          </image>
           <!-- <view class="layout_wz">文章</view> -->
         </view>
         <view class="layout_zhongdiv">
@@ -146,9 +146,9 @@
       <view class="layout_maxdiv" bindtap="wenzhangdjtwo">
         <view class="layout_imgdiv">
           <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img10.360buyimg.com/ddimg/jfs/t1/147949/18/8430/89297/5f609b0bEda322c46/4d8ff55a3b485dec.png">
-      </image>
-          
+            src="https://img10.360buyimg.com/ddimg/jfs/t1/147949/18/8430/89297/5f609b0bEda322c46/4d8ff55a3b485dec.png">
+          </image>
+
           <!-- <view class="layout_wz">文章</view> -->
         </view>
         <view class="layout_zhongdiv">
@@ -169,27 +169,12 @@
   </view>
 
   <view class="tag_maxdiv" style="width: 100%;">
-
-    <view class="red_div"></view>
-
     <view class="yxzc_div" bindtap="fnckdj">
-      <!-- <view class="content">
-        <view class="yxzc_content1">营销支持：</view>
-        <view class="yxzc_content2">蜂鸟国际</view>
-        <view class="yxzc_content2" style="margin-left:10rpx;">Copyright © 2013-2020 致设计</view>
-        <view class="yxzc_content3" >了解更多>></view>
-      </view> -->
-      <image style="width: 100%;height: 100%;"
-        src="https://img10.360buyimg.com/ddimg/jfs/t1/148553/21/8494/428803/5f617271E030422e2/5af8874323abe93b.jpg">
+      <image mode="widthFix" style="width: 100%;height: 100%;"
+        src="https://img12.360buyimg.com/ddimg/jfs/t1/149754/24/9169/336849/5f69b6e0Ec38327e0/c1efdc398b62dbd4.jpg">
       </image>
-
     </view>
   </view>
-
-
-
-
-
 
 
 
