--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -2,10 +2,6 @@
   <view class="tag_maxdiv">
     <view class="layout">
 
-      
-
-
-
       <view class="layout_maxdiv" style="margin-top: 0;" bindtap="wenzhangdjone">
         <view class="layout_imgdiv">
           <view class="layout_img">
@@ -38,7 +34,7 @@
 
 
 
-      <view class="layout_maxdiv" bindtap="wenzhangdjone">
+      <view class="layout_maxdiv" bindtap="wenzhangdjthree">
         <view class="layout_imgdiv">
           <view class="layout_img">
             <image  style="width: 100%;height: 100%;border-radius: 12rpx; "
