--- a/pages/brandone/brandone.wxml
+++ b/pages/brandone/brandone.wxml
@@ -3,22 +3,8 @@
     <view class="lbt_div">
       <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}"
         style="height:100%;">
-        <swiper-item>
-          <image mode="widthFix"
-            src="https://img13.360buyimg.com/ddimg/jfs/t1/139839/8/8562/636554/5f609f5bE413cdd1f/6a660694aa6a17fc.jpg"
-            class="slide-image" />
-        </swiper-item>
-
-        <swiper-item>
-          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6ExmR.md.jpg" class="slide-image" />
-        </swiper-item>
-
-        <swiper-item>
-          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6VdhT.jpg" class="slide-image" />
-        </swiper-item>
-
-        <swiper-item>
-          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6V09U.md.jpg" class="slide-image" />
+        <swiper-item wx:for="{{imgUrl}}" wx:key="imgUrl">
+          <image mode="widthFix" src="{{item}}" class="slide-image" />
         </swiper-item>
       </swiper>
     </view>
@@ -40,36 +26,36 @@
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <!-- <view class="header" style="height:800rpx;"></view> -->
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img11.360buyimg.com/ddimg/jfs/t1/121029/18/12977/340204/5f609d00E2d358b5d/260a5ea713a7cd23.jpg">
-      </image>
+      src="https://img11.360buyimg.com/ddimg/jfs/t1/121029/18/12977/340204/5f609d00E2d358b5d/260a5ea713a7cd23.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img13.360buyimg.com/ddimg/jfs/t1/117521/33/17875/656666/5f609d4aEe31be455/7116cbb008d2c785.jpg">
-      </image>
+      src="https://img13.360buyimg.com/ddimg/jfs/t1/117521/33/17875/656666/5f609d4aEe31be455/7116cbb008d2c785.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img12.360buyimg.com/ddimg/jfs/t1/135584/40/9940/363350/5f609d6fE59839242/b0d1137b8d445b0d.jpg">
-      </image>
+      src="https://img12.360buyimg.com/ddimg/jfs/t1/135584/40/9940/363350/5f609d6fE59839242/b0d1137b8d445b0d.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img12.360buyimg.com/ddimg/jfs/t1/130196/6/10067/229981/5f609da0Ec45ac29e/3b5154132948f35e.jpg">
-      </image>
+      src="https://img12.360buyimg.com/ddimg/jfs/t1/130196/6/10067/229981/5f609da0Ec45ac29e/3b5154132948f35e.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img10.360buyimg.com/ddimg/jfs/t1/114365/23/18132/967765/5f609db4E0913635b/76e8f3b575ef2848.jpg">
-      </image>
+      src="https://img10.360buyimg.com/ddimg/jfs/t1/114365/23/18132/967765/5f609db4E0913635b/76e8f3b575ef2848.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width: 100%;margin-top: 20rpx;">
-    <view class="yxzc_div" >
+    <view class="yxzc_div">
       <image mode="widthFix" style="width: 100%;height: 100%;"
         src="https://img14.360buyimg.com/ddimg/jfs/t1/149512/21/9259/535922/5f6d6057Ef86b23cc/c0923b8ae9276721.jpg">
       </image>
