--- a/pages/brandtwo/brandtwo.wxml
+++ b/pages/brandtwo/brandtwo.wxml
@@ -3,23 +3,10 @@
     <view class="lbt_div">
       <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}"
         style="height:100%;">
-        <swiper-item>
-          <image mode="widthFix"
-            src="https://img14.360buyimg.com/ddimg/jfs/t1/112987/16/18584/743177/5f6d5f80Ec2b49a0a/da61bad36af12bd8.jpg"
-            class="slide-image" />
+        <swiper-item wx:for="{{imgUrl}}">
+          <image mode="widthFix" src="{{item}}" class="slide-image" />
         </swiper-item>
 
-        <swiper-item>
-          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6ExmR.md.jpg" class="slide-image" />
-        </swiper-item>
-
-        <swiper-item>
-          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6VdhT.jpg" class="slide-image" />
-        </swiper-item>
-
-        <swiper-item>
-          <image mode="widthFix" src="https://s1.ax1x.com/2020/09/15/w6V09U.md.jpg" class="slide-image" />
-        </swiper-item>
       </swiper>
     </view>
   </view>
@@ -40,36 +27,36 @@
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <!-- <view class="header" style="height:800rpx;"></view> -->
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img13.360buyimg.com/ddimg/jfs/t1/121505/32/12797/459378/5f609e81Ec210302e/66b5afb0081b2e3f.jpg">
-      </image>
+      src="https://img13.360buyimg.com/ddimg/jfs/t1/121505/32/12797/459378/5f609e81Ec210302e/66b5afb0081b2e3f.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img11.360buyimg.com/ddimg/jfs/t1/148829/29/9228/739024/5f6d5fb5E41e6dbfc/53b23c74326fba08.jpg">
-      </image>
+      src="https://img11.360buyimg.com/ddimg/jfs/t1/148829/29/9228/739024/5f6d5fb5E41e6dbfc/53b23c74326fba08.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img13.360buyimg.com/ddimg/jfs/t1/124407/29/13498/386241/5f6d5fdfE23e49dbb/20799fc92d839097.jpg">
-      </image>
+      src="https://img13.360buyimg.com/ddimg/jfs/t1/124407/29/13498/386241/5f6d5fdfE23e49dbb/20799fc92d839097.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img10.360buyimg.com/ddimg/jfs/t1/141068/23/8439/364615/5f609ebbE1d8eaa7e/301899683a723606.jpg">
-      </image>
+      src="https://img10.360buyimg.com/ddimg/jfs/t1/141068/23/8439/364615/5f609ebbE1d8eaa7e/301899683a723606.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width:90%;margin-top: 20rpx;">
     <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-        src="https://img14.360buyimg.com/ddimg/jfs/t1/144329/6/8559/960620/5f609ecfE3bd09267/0499ae79f47af2b3.jpg">
-      </image>
+      src="https://img14.360buyimg.com/ddimg/jfs/t1/144329/6/8559/960620/5f609ecfE3bd09267/0499ae79f47af2b3.jpg">
+    </image>
   </view>
 
   <view class="tag_maxdiv" style="width: 100%;margin-top: 20rpx;">
-    <view class="yxzc_div" >
+    <view class="yxzc_div">
       <image mode="widthFix" style="width: 100%;height: 100%;"
         src="https://img14.360buyimg.com/ddimg/jfs/t1/149512/21/9259/535922/5f6d6057Ef86b23cc/c0923b8ae9276721.jpg">
       </image>
