--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,10 @@
 <view class="container">
-  <view class="tag_maxdiv" style="width:100%;">
-    <view class="lbt_div">
-      <swiper indicator-dots autoplay style="height:100%;">
-        <swiper-item wx:for="{{imgUrl}}" wx:key="imgUrl">
-          <image mode="widthFix" src="{{item}}" class="slide-image" />
-        </swiper-item>
-
-      </swiper>
-    </view>
+  <view class="tag_maxdiv" style="width:100%;height: 750rpx;">
+    <swiper indicator-dots autoplay style="height:100%;">
+      <swiper-item wx:for="{{imgUrl}}" wx:key="imgUrl">
+        <image mode="widthFix" src="{{item}}" class="slide-image" />
+      </swiper-item>
+    </swiper>
   </view>
 
   <view class="tag_maxdiv" style="margin-top: 40rpx;">
@@ -24,7 +21,7 @@
   </view>
 
   <!-- 列表 -->
-  <view class="tag_maxdiv" style="margin-bottom: 40rpx;" wx:for="{{selectList}}" id="{{index}}" bindtap="toDetails">
+  <view class="tag_maxdiv" style="margin-bottom: 40rpx;" wx:for="{{selectList}}" wx:key="id" id="{{index}}" bindtap="toDetails">
     <image mode="widthFix" style="border-radius: 12rpx; " src="{{item}}">
     </image>
   </view>
@@ -34,34 +31,22 @@
       <view class="gsjs_div">进一步了解</view>
       <view class="ckgd_div" bindtap="detailsdj">
         <view class="ckgd_nrdiv">
-          <view class="ckgd_nr">查看更多</view>
+          <view class="ckgd_nr">查看更多 <text class="iconfont icon-weibiaoti34" style="font-size: 26rpx;"></text></view>
         </view>
       </view>
     </view>
 
     <view class="layout">
-      <view class="layout_maxdiv" style="margin-top: 0;" bindtap="wenzhangdjone">
+      <view class="layout_maxdiv" wx:for="{{articleList}}" wx:key="id" id="{{index}}" bindtap="toArticle">
         <view class="layout_imgdiv">
-          <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-            src="https://img14.360buyimg.com/ddimg/jfs/t1/134113/10/9950/101232/5f609a16Eaa25f1e6/aa22982c9ba93cdd.png">
+          <image mode="widthFix" style="border-radius: 12rpx;" src="{{item.img}}">
           </image>
         </view>
         <view class="layout_zhongdiv">
-          <view class="layout_title">破除行业寒冰，引领创富之路丨鼎易乐平战役拉开江西首战</view>
+          <view class="layout_title">{{item.title}}</view>
         </view>
       </view>
 
-      <view class="layout_maxdiv" bindtap="wenzhangdjtwo">
-        <view class="layout_imgdiv">
-          <image mode="widthFix" style="width: 100%;height: 100%;border-radius: 12rpx; "
-            src="https://img10.360buyimg.com/ddimg/jfs/t1/147949/18/8430/89297/5f609b0bEda322c46/4d8ff55a3b485dec.png">
-          </image>
-
-        </view>
-        <view class="layout_zhongdiv">
-          <view class="layout_title">致敬新时代，探索LED灯照明新未来</view>
-        </view>
-      </view>
     </view>
   </view>
 
