--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,5 @@
 @import "/static/iconfont/iconfont.wxss";
+
 image {
   height: 100%;
   width: 100%;
@@ -32,7 +33,24 @@ image {
   justify-content: center;
 }
 
-.footer{
+/* 视频 */
+.video_div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40rpx 0;
+}
+
+.video_nr {
+  width: 90%;
+  height: 100%;
+  height: 400rpx;
+  border-radius: 20rpx;
+}
+
+/* 底部 */
+.footer {
   width: 100%;
   background-color: black;
 }
